force-app/main/default/objects/JBCXM__UsageData__c/JBCXM__UsageData__c.object-meta.xml
<CustomObject>
    <label>Usage Data</label>
    <nameField>
        <label>Usage Data Aggregation Level  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>