force-app/main/default/objects/JBCXM__UsageData__c/fields/JBCXM__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>