force-app/main/default/objects/JBCXM__UsageData__c/fields/JBCXM__InstanceId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InstanceId__c</fullName>
    <label>Instance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>