force-app/main/default/objects/JBCXM__UsageData__c/fields/JBCXM__InstanceName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InstanceName__c</fullName>
    <label>Instance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>