force-app/main/default/objects/JBCXM__UsageData__c/fields/JBCXM__Processed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>