force-app/main/default/objects/JBCXM__UsageData__c/fields/JBCXM__User__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__User__c</fullName>
    <label>User</label>
    <length>125</length>
    <type>Text</type>
</CustomField>