force-app/main/default/objects/JBCXM__UsageData__c/fields/JBCXM__WeekLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__WeekLabel__c</fullName>
    <description>To store the week label based on the week configuration when adoption data granularity on weekly</description>
    <label>Week Label</label>
    <type>Date</type>
</CustomField>